next step of passing rendering to the client
--HG--
extra : convert_revision : svn%3A95fb20f8-aa7f-11de-97f0-97815e7b2756/trunk%4021

--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -32,6 +32,8 @@ cd ./wave-protocol
 
 sametimed -> Run As -> Web Application
 
+Compile/Browse
+
 Build Path:
     JRE 1.6.0.16
     Google Web Toolkit 1.7.1 SDK
