--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -23,6 +23,12 @@
 	       <param-name>activeReverseAjaxEnabled</param-name>
 	       <param-value>true</param-value>
 	    </init-param>
+	    <!--
+        <init-param>
+            <param-name>debug</param-name>
+            <param-value>true</param-value>
+        </init-param>
+	     -->
 	    <init-param>
 	       <param-name>initApplicationScopeCreatorsAtStartup</param-name>
 	       <param-value>true</param-value>
