a big big refactoring (main action: splitting WavesClient into several classes)
--HG--
extra : convert_revision : svn%3A95fb20f8-aa7f-11de-97f0-97815e7b2756/trunk%4028

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -19,7 +19,7 @@
   
     <servlet>
         <servlet-name>executeClientCommand</servlet-name>
-        <servlet-class>name.shamansir.sametimed.wave.messaging.CommandExecutorServlet</servlet-class>
+        <servlet-class>name.shamansir.sametimed.wave.messaging.CommandsReceiverServlet</servlet-class>
     </servlet>  
   
     <!-- DWR -->  
