fixed issue with encodings and added stub scrolling support
--HG--
extra : convert_revision : svn%3A95fb20f8-aa7f-11de-97f0-97815e7b2756/trunk%4031

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -9,7 +9,7 @@
         
     <servlet>
         <servlet-name>getClientView</servlet-name>
-        <servlet-class>name.shamansir.sametimed.server.GetClientViewServlet</servlet-class>
+        <servlet-class>name.shamansir.sametimed.wave.GetClientViewServlet</servlet-class>
     </servlet>    
   
     <servlet>
