moving war to WebContent dir
--HG--
extra : convert_revision : svn%3A95fb20f8-aa7f-11de-97f0-97815e7b2756/trunk%4035

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,6 +5,8 @@
 
 <web-app>
   
+    <display-name>sametimed</display-name>
+  
     <!-- Servlets -->
         
     <servlet>
@@ -42,12 +44,12 @@
     
     <servlet-mapping>
         <servlet-name>getClientView</servlet-name>
-        <url-pattern>/same_timed/get_client_view</url-pattern>
+        <url-pattern>/get_client_view</url-pattern>
     </servlet-mapping>  
   
     <servlet-mapping>
         <servlet-name>executeClientCommand</servlet-name>
-        <url-pattern>/same_timed/cmd_exec</url-pattern>
+        <url-pattern>/cmd_exec</url-pattern>
     </servlet-mapping>
     
     <!-- DWR -->
