--- a/build.xml
+++ b/build.xml
@@ -1,13 +1,13 @@
 <project>
 	
 	<property name="project.name" value="sametimed" />
-    <property name="project.version" value="b0.1" />
+    <property name="project.version" value="b0.1.3" />
 	 
     <property name="project.dir" value="${basedir}" />
 	<property name="src.dir" value="${basedir}/src" />
     <property name="war.dir" value="${basedir}/WebContent" />
 
-    <target name="default" depends="compile,buildwar" />
+    <target name="default" depends="build-war" />
 
     <target name="compile">
         <delete dir="${war.dir}/WEB-INF/classes" />
@@ -27,9 +27,18 @@
         </copy>
     </target>
 
-    <target name="buildwar">
-        <war basedir="${war.dir}" destfile="${project.name}.${project.version}.war" webxml="${war.dir}/WEB-INF/web.xml" />
+    <target name="build-war" depends="compile">
+        <war basedir="${war.dir}" 
+        	 destfile="${project.name}.${project.version}.war" 
+        	 webxml="${war.dir}/WEB-INF/web.xml" />
     </target>
+	
+    <target name="build-no-servlet-lib-war" depends="compile">
+        <war basedir="${war.dir}" 
+        	 destfile="${project.name}.${project.version}.no-servlet-lib.war" 
+        	 webxml="${war.dir}/WEB-INF/web.xml"
+        	 excludes="WEB-INF/lib/servlet-api-2.4.jar" />
+    </target>	
 
     <target name="archive-project-files">
         <zip basedir="${project.dir}" 
