--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project>
+<project default="build-war">
 	
 	<property name="project.name" value="sametimed" />
     <property name="project.version" value="b0.1.3" />
@@ -6,8 +6,6 @@
     <property name="project.dir" value="${basedir}" />
 	<property name="src.dir" value="${basedir}/src" />
     <property name="war.dir" value="${basedir}/WebContent" />
-
-    <target name="default" depends="build-war" />
 
     <target name="compile">
         <delete dir="${war.dir}/WEB-INF/classes" />
