--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,6 +9,18 @@
   
     <display-name>sametimed</display-name>
     
+    <!-- ===================== Continuation filter ========================= -->
+    <!-- it is required for jetty to work -->
+        
+    <filter>
+        <filter-name>Continuation</filter-name>
+        <filter-class>org.eclipse.jetty.continuation.ContinuationFilter</filter-class>
+        <init-param>
+              <param-name>faux</param-name>
+              <param-value>true</param-value>
+        </init-param>
+    </filter>     
+    
     <!-- ===================== Logback Listener ============================ -->
     <!-- see http://logback.qos.ch/manual/contextSelector.html -->    
         
@@ -51,7 +63,7 @@
     <servlet-mapping>
         <servlet-name>cometd</servlet-name>
         <url-pattern>/cometd/*</url-pattern>
-    </servlet-mapping>    
+    </servlet-mapping>
   
     <!-- ===================== welcome-file-list =========================== -->    
     
@@ -72,7 +84,7 @@
     <env-entry>  
         <description>URL for configuring logback context</description>
         <env-entry-name>logback/configuration-resource</env-entry-name>
-        <env-entry-value>logback-sametimed.xml</env-entry-value>
+        <env-entry-value>sametimed-logback.xml</env-entry-value>
         <env-entry-type>java.lang.String</env-entry-type>        
     </env-entry>            
     
